--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 						<span class="company">Bharati Vidyapeeth Deemed to be University College of Engineering, Pune</span><br>
 						<span class="date">July 2017 - June 2021</span>
 					</div>
-						<p>I am currently pursuing my B.tech in Mechanical Engineering from Bharati Vidyapeeth
+						<p>I have completed my B.tech in Mechanical Engineering from Bharati Vidyapeeth
 							Deemed to be University College of engineering, Pune with an overall CGPA of "8.81". 
-							which will be hopefully completed in june 2021. 
+							in the year 2021. 
 						</p>
 				</div>
 				<div class="timeline-box">
